--- a/pebble/appinfo.json
+++ b/pebble/appinfo.json
@@ -20,7 +20,7 @@
   },
   "resources": {
     "media": [{
-      "menuIcon": true,
+      "menuIcon": false,
       "type": "bitmap",
       "name": "IMAGE_MENU_ICON",
       "file": "images/menu_icon_bw.png"
